@@ -1524,7 +1524,7 @@ init_user_panels(void)
 			g_string_sprintf (buf, "orient=%d", ORIENT_UP);
 			orient = gnome_config_get_int (buf->str);
 
-#warning FIXME: there are some issues with auto hiding drawers
+			/* FIXME: there are some issues with auto hiding drawers */
 
 			avoid_on_maximize = gnome_config_get_bool
 				("avoid_on_maximize=FALSE");
