@@ -1,3 +1,8 @@
+Tue Mar 20 04:19:03 2001  George Lebl <jirka@5z.com>
+
+	* launcher.c, session.c, foobar-widget.c: #warning is a gcc specific
+	  feature, so don't use
+
 Mon Mar 12 15:28:53 2001  George Lebl <jirka@5z.com>
 
 	* extern.c:  fix the loading extern applet icon to work again
